--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
 <!-- Suelta tus manos y tu mente para solucionar este reto -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>LAB-CAR</title>
+  </head>
+  <body>
+    <header> <!-- Logo y barra -->
+      <nav class="row valign-wrapper card-panel white">
+        <img class="col s1" src="assets/images/logoForma.png" alt="">
+        <a href="#" class="col s1 offset-s8 black-text text-darken-2">Viaja</a>
+        <a href="#" class="col s1 black-text text-darken-2">Conduce</a>
+        <a href="#" class="col s1 black-text text-darken-2">Inicia sesión</a>
+    </header>
+    <main>
+      <section class="row fondo"> <!-- Primera sección Imagen de fondo taxi-->
+        <div class="row contenedoram"> <!-- Contenedor amarillo-->
+          <div class="col s4 offset-s8 section card-panel amber accent-4">
+            <h5 class="white-text text-darken-2">Disfruta del viaje</h5>
+            <h5 class="white-text text-darken-2">Eres dueño de tu tiempo</h5>
+            <p class="white-text section text-darken-2">Viaja con <b>Lab&ltar</b></p>
+            <button class="black-text text-darken-2 button" type="button" name="button"><b>REGÍSTRATE</b></button>
+          <div class="row boton">
+            <hr class="col s4">
+            <p class=" col s4 white-text text-darken-2">o bien</p>
+            <hr class="col s4">
+            <button class="col s7 black-text text-darken-2 button" type="button" name="button"><b>Conviértete en un conductor</b></button>
+          </div>
+         </div>
+       </div>
+     </section>
+      <section class="row amber accent-4"> <!-- Segunda sección fondo amarillo-->
+        <div class="col 5 contenedorlineas">
+          <img class="celular" src="assets/images/iPhone6Plus.png" alt="">
+        </div>
+        <div class="col s4 white-text section text-darken-2">
+          <h5 class="titulo">Descarga la nueva app</h5>
+          <p class="parrafo">La versión actualizada de LabCar
+          esta llena de nuevas funciones para
+          llegar a donde quieras aún más fácil
+          y rápido</p>
+          <p class="parrafo">Con solo tocar un botón, un auto
+          llega justo a tu ubicación. Súbete y
+          no te preocupes: tu conductor sabe
+          exactamente a dónde ir.</p>
+        </div>
+      </section>
+      <section class="row fondo1"> <!-- Tercera sección fondo conductor-->
+        <div class="row">
+          <div class="col s4 offset-s8">
+            <h5 class="titulo">Conduce cuando quieras</h5>
+            <p class="parrafo">LabCar es una opción flexible para alcanzar
+            tus metas financieras.</p>
+            <button class="col s7 black-text text-darken-2 button amber accent-4" type="button" name="button">
+              <b>Conviértete en conductor</b>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="row amber accent-4"> <!-- Cuarta sección fondo amarillo-->
+        <div class="col s6">
+          <div class="row">
+            <h5 class="titulo white-text text-darken-2">Tarifas</h5>
+            <p class="parrafo white-text text-darken-2">Consulta las tarifas LabCar aquí</p>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <img src="assets/images/shape.png" alt="">
+
+            </div>
+            <div class="row">
+              <div class="col s12">
+                <img src="assets/images/shape2.png" alt="">
+
+              </div>
+            </div>
+            <div class="row">
+              <button class="col s2 black-text text-darken-2 button #ffffff white" type="button" name="button">¡TRAZAR RUTA!</button>
+            </div>
+          </div>
+        </div>
+        <div class="col s6">
+          <img class="mapa" src="assets/images/mapa.png" alt="">
+        </div>
+      </section>
+    </main>
+    <footer class="row grey darken-4">
+      <div class="row">
+        <img class="col s1" src="assets/images/logoBlanco.png" alt="">
+      </div>
+        <hr class="col s10 offset-s1 #ffffff white">
+      <div class="row">
+        <div class="col s3">
+
+        </div>
+        <div class="col s3 white-text text-darken-2">
+          <ul>
+            <li>Viaja</li>
+            <li>Conduce</li>
+            <li>Ciudades</li>
+            <li>Ciudades</li>
+            <li>Entregas</li>
+            <li>Cómo funciona?</li>
+            <li>Paises</li>
+            <li>Seguridad</li>
+          </ul>
+        </div>
+        <div class="col s3 white-text text-darken-2">
+          <ul>
+            <li>Oportunidades</li>
+            <li>Nuestra historia</li>
+            <li>API de LabCar</li>
+            <li>Eventos</li>
+            <li>Desarrolladores</li>
+            <li>Servicios</li>
+            <li>Laboratoria</li>
+            <li>Coders</li>
+          </ul>
+        </div>
+        <div class="col s3">
+          <img src="assets/images/appstore.png" alt="">
+          <img src="assets/images/enBadgeWebGeneric.png" alt="">
+        </div>
+      </div>
+      <hr class="col s10 offset-s1 #ffffff white">
+      <div class="row">
+        <p class="col s3 white-text text-darken-2">&copy;2017 LabCar technologies, Inc.</p>        
+      </div>
+    </footer>
+    <script type="text/javascript" src="js/app.js"></script>
+  </body>
+</html>
