--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header> <!-- Logo y barra -->
       <nav class="row valign-wrapper card-panel white">
         <div id="burger" class="col s1 menu"> <!-- Menu oculto -->
-          <img src="assets/images/menu.svg" alt="">
+          <img class="responsive-img" src="assets/images/menu.svg" alt="">
         </div>
         <div class="col s2 left-align menu"> <!-- Logo -->
-          <img src="assets/images/logoForma.png" alt="">
+          <img class="responsive-img" src="assets/images/logoForma.png" alt="">
         </div>
         <ul id="nav2" class="col s3 offset-s5"> <!-- Menu visible-->
           <li><a href="#" class="black-text text-darken-2">Viaja</a></li>
@@ -29,25 +29,30 @@
     <main>
       <section class="row fondo responsive-img"> <!-- PRIMERA SECCION Imagen de fondo taxi-->
         <div class="row contenedoram"> <!-- Contenedor amarillo-->
-          <div class="col s4 offset-s8 section card-panel amber accent-4">
+          <div class="col s4 offset-s8 section card-panel amber accent-4 ocultar">
             <h5 class="white-text text-darken-2">Disfruta del viaje</h5>
             <h5 class="white-text text-darken-2">Eres dueño de tu tiempo</h5>
-            <p class="white-text section text-darken-2">Viaja con <b>Lab&ltar</b></p>
+            <p class="white-text section text-darken-2">Viaja con<b>Lab&ltar</b></p>
             <button class="black-text text-darken-2 card-panel #ffffff white boton2" type="button" name="button"><strong>REGÍSTRATE</strong></button>
-          <div class="row boton">
-            <hr class="col s4">
-            <div class="col s4">
-              <p class=" col s12 white-text text-darken-2 center-align texto">o bien</p>
+            <div class="row">
+              <hr class="col s4 offset-s1 #ffffff white">
+              <div class="col s3">
+                <p class="white-text text-darken-2 center-align texto">o bien</p>
+              </div>
+              <hr class="col s4 #ffffff white">
             </div>
-            <hr class="col s4">
             <button class="black-text text-darken-2 card-panel #ffffff white boton2" type="button" name="button"><strong>Conviértete en un conductor</strong></button>
           </div>
+          <div class="col s4 offset-s8 section card-panel amber accent-4 mostrar">
+            <h5 class="white-text text-darken-2">Comienza a viajar</h5>
+            <h5 class="white-text text-darken-2">con<span class="white-text text-darken-2 labCar">Lab&ltar</span></h5>
+            <button class="black-text text-darken-2 card-panel #ffffff white boton2" type="button" name="button"><strong>Descarga el app</strong></button>
+          </div>
          </div>
-       </div>
-     </section>
+      </section>
       <section class="row amber accent-4 yellow"> <!-- SEGUNDASECCION fondo amarillo-->
         <br>
-        <div>
+        <div class="ocultar">
           <div class="col s9 contenedorlineas">
             <div class="col s6">
               <img class="celular responsive-img" src="assets/images/iPhone6Plus.png" alt="">
@@ -66,11 +71,34 @@
           </div>
           <div class="col s3"></div>
         </div>
+        <div class="row mostrar">
+          <div class="col s10 offset-s1 mostrarCel">
+            <div class="row">
+              <h5 class="col s12 responsive-text center-align white-text text-darken-2 titulo">La nueva app</h5>
+            </div>
+            <div class="col s10">
+              <img class="celular responsive-img" src="assets/images/iPhone6Plus.png" alt="">
+            </div>
+          </div>
+          <div class="row">
+            <h5 class="col s12 white-text text-darken-2 titulo">Llega a tu destino aún más rápido</h5>
+          </div>
+        </div>
         <br>
       </section>
-      <section class="row fondo1"> <!-- TERCERA SECCION fondo conductor-->
-        <div class="row conduce">
+      <section class="row fondo1 responsive-img"> <!-- TERCERA SECCION fondo conductor-->
+        <div class="row conduce ocultar">
           <div class="col s4 offset-s8 opacidad">
+            <h5 class="white-textresponsive-text text-darken-2 titulo1">Conduce cuando quieras</h5>
+            <p class="white-text responsive-text text-darken-2">LabCar es una opción flexible para alcanzar
+            tus metas financieras.</p>
+            <button class="white-text responsive-text text-darken-2 card-panel amber accent-4 boton2" type="button" name="button">
+              <strong>Conviértete en conductor</strong>
+            </button>
+          </div>
+        </div>
+        <div class="row conduce mostrar">
+          <div class="col s12 opacidad">
             <h5 class="white-text text-darken-2 titulo1">Conduce cuando quieras</h5>
             <p class="white-text text-darken-2">LabCar es una opción flexible para alcanzar
             tus metas financieras.</p>
@@ -81,7 +109,7 @@
         </div>
       </section>
       <section class="row amber accent-4"> <!-- CUARTA SECCION fondo amarillo-->
-        <div class="col s6"><!-- Contenedor principal-->
+        <div class="col s6 ocultar"><!-- Contenedor principal-->
           <div class="row"><!-- Texto-->
             <h5 class="white-text text-darken-2 titulo">Tarifas</h5>
             <p class="white-text text-darken-2 parrafo">Consulta las tarifas LabCar aquí</p>
@@ -113,8 +141,45 @@
             <button class="black-text text-darken-2 card-panel #ffffff white boton2" type="button" name="button"><strong>¡TRAZAR RUTA!</strong></button>
           </div>
         </div>
-        <div class="col s6"><!-- Mapa-->
+        <div class="col s6 ocultar"><!-- Mapa-->
           <img class="responsive-img mapa" src="assets/images/mapa.png" alt="">
+        </div>
+        <div class="row mostrar"><!-- Contenedor principal-->
+          <div class="col s12"><!-- Texto-->
+            <h5 class="white-text text-darken-2 titulo">Tarifas</h5>
+            <p class="white-text text-darken-2 parrafo">Consulta las tarifas LabCar aquí</p>
+          </div>
+          <div class="row"><!-- Input 1-->
+            <div class="col s12 input-field">
+              <div class="col s2 offset-s1 punto">
+                <img class="responsive-img punto" src="assets/images/shape.png" alt="">
+              </div>
+              <div class="col s6">
+                <label class="white-text text-darken-2 materialize-textarea" for="textarea1">Insurgentes Centro, Cuauhtémoc, Ciudad de México, México</label>
+                <textarea class="white-text text-darken-2 materialize-textarea"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="row"><!-- Input 2-->
+            <div class="col s12 input-field">
+              <div class="col s2 offset-s1 punto">
+                <img class="responsive-img punto" src="assets/images/shape2.png" alt="">
+              </div>
+              <div class="col s6">
+                <label class="white-text text-darken-2 materialize-textarea" for="textarea1">Carolina, Ciudad de los Deportes, Ciudad de México, México</label>
+                <textarea class="white-text text-darken-2 materialize-textarea"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="row"><!-- Boton-->
+            <div class="col s3"></div>
+            <button class="black-text text-darken-2 card-panel #ffffff white boton2" type="button" name="button"><strong>¡TRAZAR RUTA!</strong></button>
+          </div>
+        </div>
+        <div class="row mostrar">
+          <div class="col s10 offset-s2"><!-- Mapa-->
+            <img class="responsive-img mapa" src="assets/images/mapa2.png" alt="">
+          </div>
         </div>
       </section>
     </main>
@@ -124,7 +189,7 @@
       </div>
         <hr class="col s10 offset-s1 #ffffff white">
       <div class="row">
-        <div class="col s2 offset-s1">
+        <div class="col s2 offset-s1 ocultar">
           <div class="row">
             <div class="col s12 iconos">
               <i class="fab fa-facebook-f"></i>
@@ -135,7 +200,7 @@
             </div>
           </div>
         </div>
-        <div class="col s3 white-text text-darken-2">
+        <div class="col s3 white-text text-darken-2 ocultar">
           <ul>
             <li>Viaja</li>
             <li>Conduce</li>
@@ -147,7 +212,7 @@
             <li>Seguridad</li>
           </ul>
         </div>
-        <div class="col s3 white-text text-darken-2">
+        <div class="col s3 white-text text-darken-2 ocultar">
           <ul>
             <li>Oportunidades</li>
             <li>Nuestra historia</li>
@@ -159,19 +224,53 @@
             <li>Coders</li>
           </ul>
         </div>
-        <div class="col s3 apps">
+        <div class="col s3 apps ocultar">
           <div class="row">
             <img class="col s6 responsive-img" src="assets/images/appstore.png" alt="">
           </div>
           <br>
-          <div class="row">
+          <div class="row ocultar">
             <img class="col s6 responsive-img" src="assets/images/enBadgeWebGeneric.png" alt="">
           </div>
         </div>
       </div>
+      <div class="row">
+      <div class="col s3 offset-s1 white-text text-darken-2 mostrar">
+          <ul>
+            <li>Viaja</li>
+            <li>Conduce</li>
+            <li>Ciudades</li>
+            <li>Ciudades</li>
+            <li>Entregas</li>
+            <li>Cómo funciona?</li>
+            <li>Paises</li>
+            <li>Seguridad</li>
+          </ul>
+        </div>
+        <div class="col s8"></div>
+        <div class="row mostrar">
+          <div class="col s4 offset-s2 icono">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-apple"></i>
+            <i class="fas fa-play"></i>
+            <div class="col s6"></div>
+          </div>
+          <div class="row">
+            <div class="col s4 offset-s2">
+              <img class="responsive-img" src="assets/images/appstore.png" alt="">
+            </div>
+            <div class="col s4 offset-s2">
+              <img class="responsive-img" src="assets/images/enBadgeWebGeneric.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
       <hr class="col s10 offset-s1 #ffffff white">
       <div class="row">
-        <p class="col s3 offset-s1 white-text text-darken-2">&copy;2017 LabCar technologies, Inc.</p>
+        <p class="col s12 offset-s1 white-text text-darken-2">&copy;2017 LabCar technologies, Inc.</p>
       </div>
     </footer>
     <script type="text/javascript" src="js/app.js"></script>
