Subiendo version modal 2 Registrate

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h5 class="white-text text-darken-2">Disfruta del viaje</h5>
             <h5 class="white-text text-darken-2">Eres dueño de tu tiempo</h5>
             <p class="white-text section text-darken-2">Viaja con<b>Lab&ltar</b></p>
-            <button class="black-text text-darken-2 card-panel #ffffff white boton2" type="button" name="button"><strong>REGÍSTRATE</strong></button>
+            <button href="#modal2" class="black-text text-darken-2 card-panel #ffffff white modal-trigger boton2" type="button" name="button"><strong>REGÍSTRATE</strong></button>
             <div class="row">
               <hr class="col s4 offset-s1 #ffffff white">
               <div class="col s3">
@@ -104,6 +104,48 @@
           </div>
         </div>
         <br>
+        <div id="modal2" class="modal grey lighten-1"> <!-- Modal2-->
+          <div class="modal-content">
+            <div class="row card-panel black">
+              <h5 class=" col s6 offset-s3 valign-wrapper center-align white-text text-darken-2 titulo">Ya tienes una cuenta?</h5>
+            </div>
+            <div class="row center-align valign-wrapper">
+              <h6 class="col s12"> O CREA UNA VUENTA NUEVA</h6>
+            </div>
+            <div class="materialContainer">
+                <div class="input">
+                  <label  class="white-text responsive-text text-darken-2" for="name">Nombre</label>
+                  <input type="text" name="name" id="name">
+                </div>
+                <div class="input">
+                  <label class="white-text responsive-text text-darken-2" for="pass">Apellido</label>
+                  <input type="password" name="pass" id="pass">
+                </div>
+                <div class="input">
+                  <label class="white-text responsive-text text-darken-2" for="pass">Correo electronico</label>
+                  <input type="password" name="pass" id="pass">
+                </div>
+                <div class="input">
+                  <label class="white-text responsive-text text-darken-2" for="pass">Contraseña</label>
+                  <input type="password" name="pass" id="pass">
+                </div>
+                <div class="input">
+                  <label class="white-text responsive-text text-darken-2" for="pass">Ciudad</label>
+                  <input type="password" name="pass" id="pass">
+                </div>
+                <div class="input">
+                  <label class="white-text responsive-text text-darken-2" for="pass">(Opcional)Codigo de invitacion</label>
+                  <input type="password" name="pass" id="pass">
+                </div>
+                <div class="input">
+                  <label class="white-text responsive-text text-darken-2" for="pass">Como te enteraste de nosotros</label>
+                  <input type="password" name="pass" id="pass">
+                </div>
+                <div class="row button login">
+                  <button class="col s6 offset-s3 cyan accent-4 card-panel white-text responsive-text text-darken-2 boton2"><span>ENVIAR</span></button>
+                </div>
+            </div>
+          </div>
       </section>
       <section class="row fondo1 responsive-img"> <!-- TERCERA SECCION fondo conductor-->
         <div class="row conduce ocultar">
